# lasertargets

./: .aiexlude  .dockerignore  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  TESTING_GUIDE.md  WORKSPACE_README.md  check_errors.txt  hunter_822bfb60-bd12-4a16-97e0-01fe09ba4527_1776377508.json  hunter_822bfb60-bd12-4a16-97e0-01fe09ba4527_1776377508.txt  hunter_822bfb60-bd12-4a16-97e0-01fe09ba4527_1776377509.json  hunter_822bfb60-bd12-4a16-97e0-01fe09ba4527_1776377509.txt  last_check_errors.txt  last_errors.txt  last_errors_check.txt  last_errors_check_v2.txt  network_port_troubleshooting.md  service.js  test_results.txt  test_results_final.txt  test_results_final_clean.txt  test_results_final_sync_v4.txt  test_results_finalv2.txt  test_results_finalv3.txt  test_results_refactored.txt
.github/: AGENTS.md  CLAUDE.md  GEMINI.md  copilot-instructions.md
.github/instructions/: calibration.instructions.md  camera.instructions.md  common.instructions.md  helios.instructions.md  minigames.instructions.md  network.instructions.md  projector.instructions.md  scene.instructions.md  server.instructions.md  settings.instructions.md  terminal.instructions.md  toolbar.instructions.md
client/: Cargo.toml
common/: Cargo.toml  test_output.txt
common/src/: actor.rs  config.rs  currency.rs  game.rs  lib.rs  network.rs  path.rs  scene.rs  state.rs  target.rs  toolbar.rs
common/src/minigames/: snake.rs
common/test/: scenetest.rs
common/tests/: network_test.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/model/: Cargo.toml
crates/model/src/: config.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/plugins/: calibration.rs  camera.rs  config.rs  cursor.rs  mod.rs  projector.rs  scene.rs  toolbar.rs
crates/terminal/src/plugins/: camera.rs  settings.rs
deploy/: install-pi-deps.sh  lasertargets-server.service
docker/: Dockerfile.aarch64
examples/: testMesh.rs  vellotestb.rs
laserlogic/: Cargo.toml
laserlogic/src/: corner.rs  lib.rs  optimize.rs  simplify.rs
minigames/hunter/: Cargo.toml  INSTRUCTIONS.md  baloonplan.md
minigames/hunter/src/: common.rs  lib.rs  model.rs  plugin.rs  server.rs  terminal.rs
minigames/snake/: Cargo.toml  INSTRUCTIONS.md
minigames/snake/src/: common.rs  lib.rs  model.rs  plugin.rs  server.rs  terminal.rs
scripts/: build-pi.sh  deploy-pi.sh
server/: Cargo.toml  build.rs  raspiplan.md  temp.md
server/src/: lib.rs  main.rs
server/src/dac/: helios.rs
server/src/plugins/: actor.rs  calibration.rs  camera.rs  game.rs  gamepad.rs  mod.rs  network.rs  path.rs  projector.rs  scene.rs
server/test/: integrationtest.rs  sync_test.rs  util.rs
server/tests/: integration_test.rs
src/: main.rs
src/plugins/: calibration.rs  camera.rs  config.rs  cursor.rs  grid.rs  instructions.rs  mod.rs  scene.rs  toolbar.rs
src/util/: scale.rs
terminal/: .gitignore  Cargo.toml  build.rs
terminal/assets/fonts/: README.md
terminal/src/: main.rs  util.rs
terminal/src/plugins/: basictarget.rs  calibration.rs  camera.rs  config.rs  game.rs  instructions.rs  keyboard.rs  mod.rs  mouse.rs  network.rs  networking.rs  path.rs  projector.rs  scene.rs  settings.rs  target.rs  toolbar.rs
