[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/server",
]

[workspace.dependencies]
bevy = "0.16.1"
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true