[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/model",
    "crates/terminal",
]

[workspace.dependencies]
bevy = { version = "0.17.0"}
log = "0.4"
egui = "0.33"
egui_taffy = "0.10"
bevy_egui = "0.38.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bevy_quinnet = "0.19"
bevy_prototype_lyon = "0.15.0"


[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true