[workspace]
resolver = "2"
members = [
    "server",
    "common",
    "terminal",
    "minigames/hunter",
    "minigames/snake",
]

[workspace.dependencies]
bevy = { version = "0.17.1"}
log = "0.4"
egui = "0.33"
egui_taffy = "0.10"
bevy_egui = "0.38.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_quinnet = "0.19"
bevy_prototype_lyon = "0.15.0"
lyon_path = { version = "1.0.16", features = ["serde"] }
seldom_state = "=0.15.0"

[profile.dev]
opt-level = 1
debug = 1
debug-assertions = true
overflow-checks = true
incremental = true

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3

# Fast compile profile for development
[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = 0
incremental = true

[profile.release]
opt-level = 3
lto = true
