[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
log = { workspace = true }
common = { path = "../common" }
bevy_quinnet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[[test]]
name = "integrationtest"
path = "test/integrationtest.rs"