[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
egui = { workspace = true }
bevy_egui = { workspace = true }
common = { path = "../common" }
log = { workspace = true }
pretty_env_logger = { workspace = true }
bevy_quinnet = { workspace = true }
bevy_camera = "0.17.2"

